--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -6,26 +11,325 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  display: flex;
+  position: relative;
+  background-color: #f2f2f2;
+  align-items: center;
+  box-sizing: border-box;
   /* выше установили ограничения для секции */
+}
+
+.logo {
+  width: 228px;
+  height: 32px;
+  margin: 0;
+}
+
+.logo_place_header {
+  position: absolute;
+  background-image: url(../images/logo_place_header.svg);
+  background-size: cover;
+  top: 30px;
+  left: 64px;
+  z-index: 2;
+}
+
+.header__title {
+
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: 700;
+  margin-left: 64px;
+  z-index: 2;
+}
+
+.header__subtitle {
+  width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  font-style: normal;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  z-index: 2;
+}
+
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
+}
+
+.header__main-illustration {
+
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.content {
+
+}
+
+.description {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 100px;
+  box-sizing: border-box;
+}
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  color: #2f80ed;
+  line-height: 1.2em;
+  font-weight: normal;
+  font-size: 18px;
+  width: 175px;
+  margin: 0;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  margin: 0;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+}
+
+.two-columns__paragraph_margin_30 {
+  margin-bottom: 30px;
+}
+
+.two-columns__span-accent {
+  font-weight: 700;
+}
+
+/* Стили секции Digits */
+
+.digits {
+  margin: 100px auto;
+}
+
+.section-title {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  line-height: 1.15em;
+  font-size: 60px;
+  font-weight: 700;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 20px auto 0;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  width: 1100px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.table__cell {
+  width: 250px;
+  margin: 60px 0 0 0;
+}
+
+.table__heading {
+  line-height: 1.15em;
+  font-size: 24px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.table__text {
+  line-height: 1.2em;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 20px 0 0;
+}
+
+/* Стили для секции Feynman */
+
+.feynman {
+  background: #f2f2f2 url(../images/feynman.png) no-repeat bottom left;
+  height: 890px;
+  position: relative;
+}
+
+.faynman__title {
+  line-height: 1.15em;
+  font-size: 120px;
+  font-weight: 700;
+  width: 648px;
+  margin: 0 auto;
+  padding-top: 100px;
+  text-align: center;
+}
+
+.faynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin: 70px auto 0;
+  text-align: center;
+}
+
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-decoration: none;
+  color: #2f80ed;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+}
+
+/* Стили для блока Kaufmen */
+
+.kaufman {
+  background-color: #000000;
+  position: relative;
+  overflow: hidden;
+}
+
+.section-title_theme_dark {
+  color: white;
+  margin-top: 90px;
+  position: relative;
+  z-index: 1;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+  position: relative;
+  z-index: 1;
+}
+
+.table_theme_dark {
+  margin-bottom: 90px;
+  position: relative;
+  z-index: 1;
+
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
 }
+
+.kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: contain;
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+}
+/* Cтили блока footer */
+
+ .footer {
+  background-color: #000000;
+  min-height: 350px;
+  padding: 60px 0 40px 0;
+  box-sizing: border-box;
+  }
+
+  .footer__columns {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    min-height: 250px;
+  }
+
+  .footer__column_content_copyright {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 711px;
+    justify-content: space-between;
+  }
+
+  .logo_place_footer {
+    background-image: url(../images/logo_place_footer.svg);
+    background-size: cover;
+  }
+
+  .footer__author {
+    color: white;
+    line-height: 25px;
+    font-size: 18px;
+    font-weight: normal;
+    margin: 18px 0;
+  }
+
+  .footer__column_content_info {
+  }
+
+  .footer__column_content_social {
+  }
+
+  .footer__column-heading {
+    color: white;
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: 700;
+  }
+
+  .footer___column-links {
+    list-style-type: none;
+    margin: 20px 0 16px 0;
+  }
+
+  .column-link {
+    color: white;
+    text-decoration: none;
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: normal;
+  }
+
+  .footer__social-icon {
+    width: 16px;
+    height: 16px;
+    margin-right: 10px;
+  }
