--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -30,12 +25,12 @@
   width: 228px;
   height: 32px;
   margin: 0;
+  background-size: cover;
 }
 
 .logo_place_header {
   position: absolute;
   background-image: url(../images/logo_place_header.svg);
-  background-size: cover;
   top: 30px;
   left: 64px;
   z-index: 2;
@@ -59,6 +54,7 @@
   position: absolute;
   bottom: 30px;
   left: 64px;
+  margin: 0;
   z-index: 2;
 }
 
@@ -68,14 +64,12 @@
 }
 
 .header__main-illustration {
-
   width: 765px;
   height: 608px;
   position: absolute;
   bottom: 0;
   right: 0;
   z-index: 1;
-
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -88,18 +82,14 @@
   right: 0;
 }
 
-.content {
-
-}
-
 .description {
-  width: 80%;
-  margin: 0 auto;
-  padding-top: 100px;
+  margin: 100px 0;
   box-sizing: border-box;
 }
 
 .two-columns {
+  width: 80%;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
 }
@@ -119,18 +109,20 @@
 }
 
 .two-columns__paragraph {
-  margin: 0;
+  margin: 0 0 30px 0;
   font-size: 24px;
   line-height: 34px;
   font-weight: normal;
 }
 
-.two-columns__paragraph_margin_30 {
-  margin-bottom: 30px;
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
 }
 
 .two-columns__span-accent {
   font-weight: 700;
+  line-height: 34px;
+  font-size: 24px;
 }
 
 /* Стили секции Digits */
@@ -163,11 +155,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding: 0;
 }
 
 .table__cell {
   width: 250px;
   margin: 60px 0 0 0;
+  list-style-type: none;
 }
 
 .table__heading {
@@ -190,6 +184,8 @@
   background: #f2f2f2 url(../images/feynman.png) no-repeat bottom left;
   height: 890px;
   position: relative;
+  padding-top: 100px;
+  box-sizing: border-box;
 }
 
 .faynman__title {
@@ -198,7 +194,6 @@
   font-weight: 700;
   width: 648px;
   margin: 0 auto;
-  padding-top: 100px;
   text-align: center;
 }
 
@@ -227,11 +222,12 @@
   background-color: #000000;
   position: relative;
   overflow: hidden;
+  padding-top: 90px;
+  padding-bottom: 90px;
 }
 
 .section-title_theme_dark {
   color: white;
-  margin-top: 90px;
   position: relative;
   z-index: 1;
 }
@@ -243,7 +239,6 @@
 }
 
 .table_theme_dark {
-  margin-bottom: 90px;
   position: relative;
   z-index: 1;
 
@@ -291,7 +286,6 @@
 
   .logo_place_footer {
     background-image: url(../images/logo_place_footer.svg);
-    background-size: cover;
   }
 
   .footer__author {
@@ -302,30 +296,27 @@
     margin: 18px 0;
   }
 
-  .footer__column_content_info {
-  }
-
-  .footer__column_content_social {
-  }
-
   .footer__column-heading {
     color: white;
     line-height: 30px;
     font-size: 18px;
     font-weight: 700;
+    margin: 0 0 20px 0;
   }
 
   .footer___column-links {
     list-style-type: none;
-    margin: 20px 0 16px 0;
+    margin: 0 0 16px 0;
+    padding-left: 0;
   }
 
-  .column-link {
+  .footer__column-link {
     color: white;
     text-decoration: none;
     line-height: 30px;
     font-size: 18px;
     font-weight: normal;
+    padding-left: 0;
   }
 
   .footer__social-icon {
