--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -6,7 +15,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', 'Arial', sans-serif;
+  font-family: 'Arial', sans-serif;
 }
 
 .header {
@@ -18,6 +27,7 @@
   background-color: #f2f2f2;
   align-items: center;
   box-sizing: border-box;
+  overflow: hidden;
   /* выше установили ограничения для секции */
 }
 
@@ -61,6 +71,12 @@
 .header__link {
   text-decoration: none;
   color: #2f80ed;
+  opacity: 1;
+  transition: opacity 0.5s;
+  }
+
+.header__link:hover {
+  opacity: 0.5;
 }
 
 .header__main-illustration {
@@ -80,6 +96,10 @@
   position: absolute;
   top: 64px;
   right: 0;
+}
+
+.rotation {
+  animation: rotation 20s linear infinite;
 }
 
 .description {
@@ -123,6 +143,125 @@
   font-weight: 700;
   line-height: 34px;
   font-size: 24px;
+}
+/* Стили секции techniques */
+
+.techniques {
+  width: 80%;
+  margin: 100px auto 0;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  width: 920px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.cart__item {
+  list-style-type: none;
+  margin: 60px 100px 0 0;
+  width: 240px;
+}
+
+.cards .cart__item:nth-child(3) {
+  margin-right: 0;
+}
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 40px;
+}
+
+.cards__title {
+  margin: 43px 0 0 0;
+  line-height: 1.15em;
+  font-size: 24px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.cards__description {
+  margin: 16px 0 0 0;
+  line-height: 23px;
+  font-size: 18px;
+  font-weight: normal;
+  text-align: center;
+}
+
+/* Cтили секции Видео */
+
+.video {
+  margin-top: 100px;
+}
+
+.video__iframes {
+  width: 1050px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  top: 50px;
+}
+
+.video__frame {
+  width: 515px;
+  height: 316px;
+}
+
+/* Стили секции oakley */
+
+.oakley {
+  background-color: #f2f2f2;
+  padding-top: 160px;
+}
+
+/* Стили для секции Feynman */
+
+.feynman {
+  background: #f2f2f2 url(../images/feynman.png) no-repeat bottom left;
+  height: 890px;
+  position: relative;
+  padding-top: 100px;
+  box-sizing: border-box;
+}
+
+.feynman__title {
+  line-height: 1.15em;
+  font-size: 120px;
+  font-weight: 700;
+  width: 648px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin: 70px auto 0;
+  text-align: center;
+}
+
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-decoration: none;
+  color: #2f80ed;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  opacity: 1;
+  transition: opacity 0.5s;
+}
+
+.feynman__link:hover {
+  opacity: 0.5;
 }
 
 /* Стили секции Digits */
@@ -178,44 +317,80 @@
   margin: 20px 0 0;
 }
 
-/* Стили для секции Feynman */
+/* Стили для блока khan */
 
-.feynman {
-  background: #f2f2f2 url(../images/feynman.png) no-repeat bottom left;
-  height: 890px;
-  position: relative;
-  padding-top: 100px;
-  box-sizing: border-box;
+.khan {
+  background-color: #f2f2f2;
+  padding-top: 105px;
 }
 
-.faynman__title {
-  line-height: 1.15em;
-  font-size: 120px;
-  font-weight: 700;
-  width: 648px;
+.khan__container {
+  width: 80%;
   margin: 0 auto;
-  text-align: center;
 }
 
-.faynman__subtitle {
-  line-height: 51px;
-  font-size: 36px;
+.khan__author {
+  margin: 0;
+  line-height: 42px;
+  font-size: 30px;
   font-weight: normal;
-  margin: 70px auto 0;
-  text-align: center;
 }
 
-.feynman__link {
-  line-height: 51px;
-  font-size: 36px;
+.khan__title {
+  margin: 0;
+  line-height: 1.15em;
+  font-size: 60px;
+  font-weight: 700;
+}
+
+.khan__quote {
+  width: 790px;
+  margin: 50px 0 0 0;
+  line-height: 34px;
+  font-size: 24px;
   font-weight: normal;
-  text-decoration: none;
+}
+
+.khan__quote-author {
+  margin: 36px 0 0 0;
+  line-height: 1.15em;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.khan__quote-author-subline {
+  margin: 10px 0 0 0;
+  line-height: 1.15em;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.khan__book-container {
+  margin: 68px 0 0 0;
+  display: flex;
+}
+
+.khan__book-pic {
+  width: 620px;
+  height: 608px;
+  background-image: url(../images/khan-book.jpg);
+  background-size: cover;
+  margin-right: 48px;
+}
+
+.khan__buy-link {
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
   color: #2f80ed;
-  position: absolute;
-  top: 50%;
-  right: 48px;
+  text-decoration: none;
+  opacity: 1;
+  transition: opacity 0.5s;
 }
 
+.khan__buy-link:hover {
+  opacity: 0.5;
+}
 /* Стили для блока Kaufmen */
 
 .kaufman {
@@ -259,6 +434,32 @@
   position: absolute;
   top: 0;
   right: -210px;
+}
+
+.resources {
+  margin-top: 100px;
+}
+
+.resources__logo-zone {
+  width: 1100px;
+  margin: 80px auto 217px auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.resources__link {
+  opacity: 1;
+  transition: opacity 0.5s;
+}
+
+.resources__link:hover {
+  opacity: 0.5;
+}
+
+.resources__logo {
+  text-align: center;
+  width: 270px;
+  height: 38px;
 }
 /* Cтили блока footer */
 
@@ -317,6 +518,12 @@
     font-size: 18px;
     font-weight: normal;
     padding-left: 0;
+    opacity: 1;
+    transition: opacity 0.5s;
+  }
+
+  .footer__column-link:hover {
+    opacity: 0.5;
   }
 
   .footer__social-icon {
