Вторая проектная рвботы_Первая версия(исправлены названия в card)

--- a/blocks/cards/__item/card__item.css
+++ b/blocks/cards/__item/card__item.css
@@ -1,9 +1,9 @@
-.cart__item {
+.card__item {
   list-style-type: none;
   margin: 60px 100px 0 0;
   width: 240px;
 }
 
-.cards .cart__item:nth-child(3) {
+.cards .card__item:nth-child(3) {
   margin-right: 0;
 }
