--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,9 +1,9 @@
-.card__item {
+.cards__item {
   list-style-type: none;
   margin: 60px 100px 0 0;
   width: 240px;
 }
 
-.cards .card__item:nth-child(3) {
+.cards .cards__item:nth-child(3) {
   margin-right: 0;
 }
