--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,7 +1,6 @@
 .khan__book-pic {
-  width: 620px;
-  height: 608px;
-  background-image: url(../../../images/khan-book.jpg);
-  background-size: cover;
+  width: 608px;
+  height: 620px;
   margin-right: 48px;
+  overflow-y: hidden;
 }
