--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,8 +1,6 @@
 .video__iframes {
-  width: 1050px;
-  margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   position: relative;
   top: 50px;
 }
